// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckAWSButton should match a snapshot where the AWS status is AWSOnly 1`] = `
<Fragment>
  AWS Customers Only
</Fragment>
`;

exports[`CheckAWSButton should match a snapshot where the AWS status is AllUsers 1`] = `
<Fragment>
  All Customers
</Fragment>
`;

exports[`CheckAWSButton should match a snapshot where the AWS status is unfetched 1`] = `
<Button
  disabled={false}
  intent="primary"
  loading={false}
  onClick={[Function]}
>
  Check AWS
</Button>
`;
